syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message Operation {
    double numberOne = 1;
    double numberTwo = 2;
}

message CalcRequest {
    Operation operation = 1;
}

message CalcResponse {
    double result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

service CalculatorService {
    // Unary
    rpc Sun(CalcRequest) returns (CalcResponse){};
    rpc Multiply(CalcRequest) returns (CalcResponse){};

    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){}
} 